infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payo-core
  labels:
    app.kubernetes.io/part-of: payo-core-bank
